# structs.go
@@ -1,5 +1,9 @@
 package main
 
+//import (
+//	"database/sql"
+//)
+
 type User struct {
 	Name string `db:"name" json:"name"`
 	Role string `db:"role" json:"role"`
@@ -15,10 +19,21 @@ type UserRegister struct {
 	Password string `form:"password" json:"password" xml:"password"  binding:"required"`
 }
 
-type UserPost struct {
+type UserPostGET struct {
 	Post_id string `db:"id" form:"id" json:"id" xml:"id"`
 	Name    string `db:"name" form:"name" json:"name" xml:"name"`
 	Text    string `db:"text" form:"text" json:"text" xml:"text"  binding:"required"`
+	Image   string `db:"Image" form:"Image" json:"Image" xml:"Image"`
+}
+
+type UserPostPOST struct {
+	Text     string `db:"text" form:"text" json:"text" xml:"text"  binding:"required"`
+	Image_id string `db:"image_id" form:"image_id" json:"image_id" xml:"image_id"`
+}
+
+type Image struct {
+	Image_id string `db:"id" form:"id" json:"id" xml:"id"`
+	Image    string `db:"image" form:"image" json:"image" xml:"image"`
 }
 
 type UserComment struct {
